2008-08-02  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* ext/flac/gstflacdec.c: (gst_flac_dec_setup_seekable_decoder),
	(gst_flac_dec_setup_stream_decoder),
	(gst_flac_dec_update_metadata):
	Always post the audio-codec tag, not only if other tags are present.

2008-08-02  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	Back to development -> 0.10.9.1

=== release 0.10.9 ===

2008-07-31  Jan Schmidt <jan.schmidt@sun.com>

	* configure.ac:
	  releasing 0.10.9, "Steam Train Rolling"

2008-07-31  Jan Schmidt  <jan.schmidt@sun.com>

	* ext/soup/gstsouphttpsrc.c:
	Don't throw an error when soup completes a msg with status
	'cancelled', as that indicates we cancelled a request while
	shutting down or seeking, and it's not an error.
	Fixes: #540300 again.

2008-07-28  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	0.10.8.4 pre-release

2008-07-25  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst/qtdemux/qtdemux.c: (gst_qtdemux_activate_segment):
	Fix segment-stop regression.
	Add documentation regarding segments in quicktime files by Wim Taymans.
	Fixes #544509

2008-07-25  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	0.10.8.3 pre-release

	* po/LINGUAS:
	* po/pt_BR.po:
	Add pt_BR translation

2008-07-23  Michael Smith <msmith@songbirdnest.com>

	* gst/goom/convolve_fx.c:
	* gst/goom/filters.c:
	* gst/goom/goom_config.h:
	* gst/goom/goom_core.c:
	* gst/goom/goom_tools.h:
	  Fix build with MSVC: include glib.h to define inline appropriately,
	  use header guards where needed.
	* gst/udp/gstudpnetutils.c:
	* gst/udp/gstudpsrc.c:
	  Fix build with MSVC: use WSA* constants/functions where appropriate, use
	  g_snprintf rather than snprintf.
	  Fixes #544433.

2008-07-22  Stefan Kost  <ensonic@users.sf.net>

	* gst/debug/gsttaginject.c:
	* gst/debug/gsttaginject.h:
	  Sent tags in _transform_ip() instead of _start(). Fixes #543404
	  partially.

2008-07-19  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	0.10.8.2 pre-release
